--- a/AutoLayoutDemo.xcodeproj/xcshareddata/xcschemes/AutoLayoutDemo.xcscheme
+++ b/AutoLayoutDemo.xcodeproj/xcshareddata/xcschemes/AutoLayoutDemo.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3824D5051936220F1CE49985"
-               BuildableName = "AutoLayoutDemo.app"
+               BuildableName = "AutoLayoutDemo-Debug.app"
                BlueprintName = "AutoLayoutDemo"
                ReferencedContainer = "container:AutoLayoutDemo.xcodeproj">
             </BuildableReference>
@@ -23,17 +23,17 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E5E0D56D6719A76DC8E4942D"
-               BuildableName = "UnitTests.octest"
+               BuildableName = "AutoLayoutDemo-Debug.xctest"
                BlueprintName = "UnitTests"
                ReferencedContainer = "container:AutoLayoutDemo.xcodeproj">
             </BuildableReference>
@@ -43,44 +43,49 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3824D5051936220F1CE49985"
-            BuildableName = "AutoLayoutDemo.app"
+            BuildableName = "AutoLayoutDemo-Debug.app"
             BlueprintName = "AutoLayoutDemo"
             ReferencedContainer = "container:AutoLayoutDemo.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <AdditionalOptions>
-      </AdditionalOptions>
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3824D5051936220F1CE49985"
-            BuildableName = "AutoLayoutDemo.app"
+            BuildableName = "AutoLayoutDemo-Debug.app"
             BlueprintName = "AutoLayoutDemo"
             ReferencedContainer = "container:AutoLayoutDemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3824D5051936220F1CE49985"
-            BuildableName = "AutoLayoutDemo.app"
+            BuildableName = "AutoLayoutDemo-Debug.app"
             BlueprintName = "AutoLayoutDemo"
             ReferencedContainer = "container:AutoLayoutDemo.xcodeproj">
          </BuildableReference>
